--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <title>Seattle Neighborhood Data</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- TODO -->
-    <!-- Let's put the Handlebars template here, in a <script> tag -->
+    <script id="neighborhood-template" type="text/x-handlebars-template">
+        <h2>{{name}}</h2>
+        <p>A neighborhood in the city of {{city}}</p>
+        <p>Population: {{population}}</p>
+        <p>Founded in: {{founded}}</p>
+        {{{body}}}
+    </script>
 
   </head>
+
   <body>
     <header class="site-header clearfix">
       <section class="heading-group-h1">
@@ -26,7 +33,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- REVIEW: note that Handlebars has been added as a dependency here -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
     <script src="scripts/dataSet.js"></script>
     <script src="scripts/neighborhood.js"></script>
   </body>
